# 2025-CP_PHISHTI

./: BACK_BUTTON_IMPLEMENTATION_SUMMARY.md  COMPATIBILITY_GUIDE.md  COMPREHENSIVE_TESTING_GUIDE.md  COMPREHENSIVE_TEST_REPORT.md  Chapt-1-3-docu-TryPhish.docx  DATASET_INTEGRATION_SUMMARY.md  DISTILBERT_SETUP_GUIDE.md  EMAIL_VERIFICATION_FIX_SUMMARY.md  FEATURE_VERIFICATION_REPORT.md  FIREBASE_SETUP_GUIDE.md  GOOGLE_SIGNIN_SETUP.md  GUEST_MODE_ONLINE_ML_IMPLEMENTATION.md  LOGO_AND_BRANDING_SUMMARY.md  MIGRATION_TO_SUPABASE_SUMMARY.md  ML_TRAINING_GUIDE.md  MOBILE_INDEPENDENCE_GUIDE.md  MOBILE_INSTALLATION_STATUS.md  ONLINE_ML_SERVICES_SUMMARY.md  ONLINE_ML_SETUP_GUIDE.md  ONLINE_MODE_SETUP.md  PERFORMANCE_FIXES.md  README.md  REAL_DISTILBERT_ENABLED.md  RUST_DISTILBERT_INTEGRATION_GUIDE.md  RUST_DISTILBERT_INTEGRATION_SUMMARY.md  SETUP.md  SMS_SHARING_INTEGRATION_GUIDE.md  SUPABASE_SETUP_GUIDE.md  TESTING_GUIDE.md  create_icons.dart  firebase_options.dart  generate_app_icons.dart  generate_app_icons.py  pubspec.yaml  pubspec_minimal.yaml  pubspec_original.yaml  test_database_operations.dart  test_ml_services.dart
android/: build.gradle  gradle.properties  lint.xml
lib/: main.dart  supabase_options.dart
ml_training/: download_datasets.py  requirements.txt  run_training.bat  run_training.sh  setup_training_environment.py  (+3 more)
rust_ml/: Cargo.toml  Cargo_mock.toml  Cargo_original.toml  README.md  build.rs  build_android.bat  build_android.sh
rust_ml/.cargo/: config.toml
rust_ml/examples/: test_phishing_detection.rs
rust_ml/src/: lib.rs  lib_mock.rs  lib_original.rs
(+114 files in other folders)
