[package]
name = "rust_ml"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Core dependencies for DistilBERT implementation
rust-bert = "0.21"
tokenizers = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

[build-dependencies]
cbindgen = "0.26"

[[example]]
name = "test_phishing_detection"
path = "examples/test_phishing_detection.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1